[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/EngineRoom.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Chapter IV/ch04_links/er_ss03_ch04.tres" type="Resource" id=2]
[ext_resource path="res://World/Waypoint.tscn" type="PackedScene" id=3]
[ext_resource path="res://Levels/Chapter IV/ER_CH04.gd" type="Script" id=4]

[node name="ER_CH04" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="EngineControlOne" parent="." index="3"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="EngineControlTwo" parent="." index="4"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="EngineControlThree" parent="." index="5"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="EngineControlFour" parent="." index="6"]
puzzlePath = "res://Resources/Puzzles/ResistorPuzzleOne.tscn"

[node name="SS_CH04_03" parent="." index="7" instance=ExtResource( 3 )]
position = Vector2( 264, 259 )
rotation = 1.5708
connection = ExtResource( 2 )
new_level_path = "res://Levels/Chapter IV/SS_CH04_03.tscn"

[editable path="ShipTileset"]
